# Cpp17CompleteGuide

./: .gitignore  CMakeLists.txt  README.md
Ch10_ConstexprIf/: CMakeLists.txt  constexpr_if.cpp  constexpr_if_caveats.cpp  other_examples.cpp
Ch11_FoldExpressions/: CMakeLists.txt  folds.cpp
Ch12_StringLiteralTemplateParamters/: CMakeLists.txt  str_literal_params.cpp
Ch13_autoTemplateParameters/: CMakeLists.txt  auto_template_params.cpp  decltype_auto_template_params.cpp
Ch14_ExtendedUsingDeclarations/: CMakeLists.txt  extended_using_decl.cpp
Ch15_Optional/: CMakeLists.txt  optional.cpp
Ch16_Variant/: CMakeLists.txt  variant.cpp  variant_poly.cpp  visitors.cpp
Ch17_Any/: CMakeLists.txt  any.cpp
Ch18_Byte/: CMakeLists.txt  byte.cpp
Ch19_string_view/: CMakeLists.txt  string_view.cpp
Ch1_StructuredBindings/: CMakeLists.txt  structured_bindings.cpp  tuple_api.cpp  tuple_api_alt.cpp  tuple_api_members.cpp
Ch20_Filesystem/: CMakeLists.txt  checkpath.cpp  checkpath2.cpp  create_files.cpp  dirsize.cpp
Ch22_parallel_algorithms/: CMakeLists.txt  measure.cpp  timer.h
Ch25_Other_utilities/: CMakeLists.txt  as_const.cpp  clamp.cpp  sample.cpp  size_data_empty.cpp  uncaught.cpp
Ch26_ContainerExtensions/: CMakeLists.txt  insert_or_assign.cpp  node_handles.cpp  support_for_incomplete_types.cpp  try_emplace.cpp
Ch29_PMR/: CMakeLists.txt  pmr0.cpp  pmr1.cpp  pmr2.cpp  pmr_type.hpp  track_pool.cpp  use_pmr_type.cpp
Ch30_OperatorNew/: CMakeLists.txt  aligned_new_cpp11.cpp  aligned_new_cpp11.hpp  aligned_new_cpp17.cpp  aligned_new_cpp17.hpp  track_new.cpp  track_new.hpp
Ch31_to_chars_from_chars/: CMakeLists.txt  to_from_chars.cpp  to_from_chars.hpp
Ch33_Generic_code_improvements/: CMakeLists.txt  bool_constant.cpp  invoke.cpp  voidt.cpp
Ch3_inlineVariables/: CMakeLists.txt  inline_thread_local.hpp  itl_main.cpp  use_itl.cpp  use_itl.hpp
Ch4_Aggregates/: CMakeLists.txt  aggregate_extensions.cpp
Ch5_MandatoryCopyElision/: CMakeLists.txt  mandatory_elision.cpp
Ch6_LambdaExtensions/: CMakeLists.txt  constexpr_lambdas.cpp  pass_this_by_copy.cpp
Ch8_OtherFeatures/: CMakeLists.txt  defined_expression_evaluation_order.cpp  fixed_auto_direct_init.cpp  relaxed_enum_init.cpp
Ch9_ClassTemplateArgumentDeduction/: CMakeLists.txt  deduction_basics.cpp  deduction_guides.cpp
include/: pmr_tracker.hpp  track_new.hpp
